; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_socket_lock_init.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_socket_lock_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.socket_lock = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socket*, %struct.socket_lock*)* @socket_lock_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @socket_lock_init(%struct.socket* %0, %struct.socket_lock* %1) #0 {
  %3 = alloca %struct.socket*, align 8
  %4 = alloca %struct.socket_lock*, align 8
  store %struct.socket* %0, %struct.socket** %3, align 8
  store %struct.socket_lock* %1, %struct.socket_lock** %4, align 8
  %5 = load %struct.socket*, %struct.socket** %3, align 8
  %6 = getelementptr inbounds %struct.socket, %struct.socket* %5, i32 0, i32 0
  %7 = load %struct.socket_lock*, %struct.socket_lock** %4, align 8
  %8 = getelementptr inbounds %struct.socket_lock, %struct.socket_lock* %7, i32 0, i32 1
  store i32* %6, i32** %8, align 8
  %9 = load %struct.socket_lock*, %struct.socket_lock** %4, align 8
  %10 = getelementptr inbounds %struct.socket_lock, %struct.socket_lock* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
